Fix corner case of system modules not consistently being enabled