@@ -30,7 +30,8 @@ import tests.JImageValidator;
 
 /*
  * @test
- * @summary Test appropriate handling of generated SystemModules* classes in run-time image link mode
+ * @summary Test SystemModules handling of java --list-modules with system modules
+ *          not consistently enabled/disabled.
  * @requires (vm.compMode != "Xcomp" & os.maxMemory >= 2g)
  * @library ../../lib /test/lib
  * @modules java.base/jdk.internal.classfile
@@ -40,52 +41,57 @@ import tests.JImageValidator;
  *          jdk.jlink/jdk.tools.jimage
  * @build tests.* jdk.test.lib.process.OutputAnalyzer
  *        jdk.test.lib.process.ProcessTools
- * @run main/othervm -Xmx1g SystemModulesTest
+ * @run main/othervm -Xmx1g SystemModulesTest2
  */
-public class SystemModulesTest extends AbstractJmodLessTest {
+public class SystemModulesTest2 extends AbstractJmodLessTest {
 
     public static void main(String[] args) throws Exception {
-        SystemModulesTest test = new SystemModulesTest();
+        SystemModulesTest2 test = new SystemModulesTest2();
         test.run();
     }
 
     /*
-     * SystemModule classes are module specific. If the jlink is based on the
-     * modules image, then earlier generated SystemModule classes shall not get
-     * propagated.
+     * SystemModule classes are module specific and SystemModulesMap gets generated
+     * for each link. This turns out to be a problem if we perform an initial
+     * jmod-full link with system-modules plugin enabled, which in turn would
+     * change the SystemModulesMap in the run time image that the final run-time
+     * based link will then use to generate a link only using java.base. In that
+     * case, we cannot use the fast path and we ought to use the slow path in
+     * order to avoid CNFEs.
      */
     @Override
     void runTest(Helper helper) throws Exception {
-        // create an image with a module containing a main entrypoint (jdk.httpserver),
-        // thus producing the SystemModules$0.class. Add jdk.jdwp.agent as a module which
-        // isn't resolved by default, so as to generate SystemModules$default.class
-        Path javaseJmodless = createJavaImageJmodLess(new BaseJlinkSpecBuilder()
+        // Create an image with two modules, so that SystemModulesMap gets generated
+        // for it as system-modules plugin is auto-enabled. Later, reduce the set
+        // of modules to only java.base with system-modules plugin disabled.
+        Path javaJmodless = createJavaImageJmodLess(new BaseJlinkSpecBuilder()
                                                             .helper(helper)
-                                                            .name("httpserver-jlink-jmodless-derived")
+                                                            .name("jlink-jmodless-sysmod2")
                                                             .addModule("jdk.httpserver")
-                                                            .addModule("jdk.jdwp.agent")
                                                             .addModule("jdk.jlink")
                                                             .validatingModule("java.base")
                                                             .addExtraOption("--unlock-run-image")
                                                             .build());
-        // Verify that SystemModules$0.class etc. are there
-        JImageValidator.validate(javaseJmodless.resolve("lib").resolve("modules"),
-                                    List.of("/java.base/jdk/internal/module/SystemModules$default.class",
-                                            "/java.base/jdk/internal/module/SystemModules$0.class"), Collections.emptyList());
-        // Finally attempt another jmodless link reducing modules to java.base only,
-        // no longer expecting SystemModules$0.class
-        jlinkUsingImage(new JlinkSpecBuilder()
+        // Verify that SystemModules$all.class is there
+        JImageValidator.validate(javaJmodless.resolve("lib").resolve("modules"),
+                                    List.of("/java.base/jdk/internal/module/SystemModules$all.class"), Collections.emptyList());
+        // Attempt another run-time image link reducing modules to java.base only,
+        // but we don't rewrite SystemModulesMap.
+        Path finalResult = jlinkUsingImage(new JlinkSpecBuilder()
                                 .helper(helper)
-                                .imagePath(javaseJmodless)
-                                .name("java.base-from-jdk-httpserver-derived")
+                                .imagePath(javaJmodless)
+                                .name("java.base-from-sysmod2-derived")
                                 .addModule("java.base")
+                                .extraJlinkOpt("--disable-plugin")
+                                .extraJlinkOpt("system-modules") // disable sysmods
                                 .expectedLocation("/java.base/jdk/internal/module/SystemModulesMap.class")
                                 .expectedLocation("/java.base/jdk/internal/module/SystemModules.class")
-                                .expectedLocation("/java.base/jdk/internal/module/SystemModules$all.class")
                                 .unexpectedLocation("/java.base/jdk/internal/module/SystemModules$0.class")
-                                .unexpectedLocation("/java.base/jdk/internal/module/SystemModules$default.class")
                                 .validatingModule("java.base")
                                 .build());
+        // Finally run --list-modules so as to verify it does not thow CNFE
+        List<String> expectedModules = List.of("java.base");
+        verifyListModules(finalResult, expectedModules);
     }
 
 }
